changes: 1.加入了spi的配置代码

--- a/c8t6_2Edition/MDK-ARM/c8t6_2Edition/c8t6_2Edition.build_log.htm
+++ b/c8t6_2Edition/MDK-ARM/c8t6_2Edition/c8t6_2Edition.build_log.htm
@@ -21,15 +21,38 @@ Target DLL:      Segger\JL2CM3.dll V2.99.38.0
 Dialog DLL:      TCM.DLL V1.42.0.0
  
 <h2>Project:</h2>
-E:\linsen.yang\c8t6_2Edition\MDK-ARM\c8t6_2Edition.uvprojx
+E:\linsen.yang\graduate_project\c8t6_2Edition\MDK-ARM\c8t6_2Edition.uvprojx
 Project File Date:  03/08/2021
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'c8t6_2Edition'
+assembling startup_stm32f103xb.s...
+compiling stm32f1xx_hal_gpio_ex.c...
+compiling main.c...
+compiling gpio.c...
+compiling stm32f1xx_it.c...
+compiling stm32f1xx_hal_rcc_ex.c...
+compiling usart.c...
+compiling stm32f1xx_hal.c...
 compiling oled.c...
+compiling stm32f1xx_hal_msp.c...
+compiling spi.c...
+compiling stm32f1xx_hal_spi.c...
+compiling stm32f1xx_hal_rcc.c...
+compiling stm32f1xx_hal_tim.c...
+compiling stm32f1xx_hal_pwr.c...
+compiling stm32f1xx_hal_tim_ex.c...
+compiling stm32f1xx_hal_cortex.c...
+compiling stm32f1xx_hal_exti.c...
+compiling system_stm32f1xx.c...
+compiling stm32f1xx_hal_flash.c...
+compiling stm32f1xx_hal_gpio.c...
+compiling stm32f1xx_hal_flash_ex.c...
+compiling stm32f1xx_hal_dma.c...
+compiling stm32f1xx_hal_uart.c...
 linking...
-Program Size: Code=4266 RO-data=294 RW-data=16 ZI-data=1176  
+Program Size: Code=4094 RO-data=294 RW-data=16 ZI-data=1176  
 FromELF: creating hex file...
 "c8t6_2Edition\c8t6_2Edition.axf" - 0 Error(s), 0 Warning(s).
 
@@ -54,7 +77,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.4.0
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:19
 </pre>
 </body>
 </html>
