--- a/Timer_test/MDK-ARM/Timer_test/Timer_test.build_log.htm
+++ b/Timer_test/MDK-ARM/Timer_test/Timer_test.build_log.htm
@@ -27,6 +27,11 @@ Project File Date:  04/10/2021
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 1 (build 61)', folder: 'D:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Timer_test'
+compiling main.c...
+compiling tim.c...
+linking...
+Program Size: Code=5564 RO-data=292 RW-data=20 ZI-data=1308  
+FromELF: creating hex file...
 "Timer_test\Timer_test.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -45,7 +50,7 @@ Package Vendor: ARM
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:4.3.0
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
