--- a/Timer_test/MDK-ARM/Timer_test/Timer_test.build_log.htm
+++ b/Timer_test/MDK-ARM/Timer_test/Timer_test.build_log.htm
@@ -17,20 +17,19 @@ Library Manager: ArmAr.exe V5.06 update 1 (build 61)
 Hex Converter:   FromElf.exe V5.06 update 1 (build 61)
 CPU DLL:         SARMCM3.DLL V5.18
 Dialog DLL:      DCM.DLL V1.13.6.0
-Target DLL:      Segger\JL2CM3.dll V2.99.18.0
+Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V2.0.18.0
 Dialog DLL:      TCM.DLL V1.14.8.0
  
 <h2>Project:</h2>
 D:\graduateProject\Timer_test\MDK-ARM\Timer_test.uvprojx
-Project File Date:  04/10/2021
+Project File Date:  04/11/2021
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 1 (build 61)', folder: 'D:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Timer_test'
 compiling main.c...
-compiling tim.c...
 linking...
-Program Size: Code=5564 RO-data=292 RW-data=20 ZI-data=1308  
+Program Size: Code=7056 RO-data=292 RW-data=24 ZI-data=1304  
 FromELF: creating hex file...
 "Timer_test\Timer_test.axf" - 0 Error(s), 0 Warning(s).
 
@@ -50,7 +49,7 @@ Package Vendor: ARM
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:4.3.0
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
