--- a/Timer_test/MDK-ARM/Timer_test/Timer_test.build_log.htm
+++ b/Timer_test/MDK-ARM/Timer_test/Timer_test.build_log.htm
@@ -21,15 +21,15 @@ Target DLL:      Segger\JL2CM3.dll V2.99.18.0
 Dialog DLL:      TCM.DLL V1.14.8.0
  
 <h2>Project:</h2>
-D:\graduateProject\Timer_test\MDK-ARM\Timer_test.uvprojx
-Project File Date:  04/11/2021
+d:\graduateProject\Timer_test\MDK-ARM\Timer_test.uvprojx
+Project File Date:  04/13/2021
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 1 (build 61)', folder: 'D:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Timer_test'
-compiling pid.c...
+compiling tim.c...
 linking...
-Program Size: Code=7604 RO-data=292 RW-data=28 ZI-data=1348  
+Program Size: Code=7788 RO-data=332 RW-data=40 ZI-data=1376  
 FromELF: creating hex file...
 "Timer_test\Timer_test.axf" - 0 Error(s), 0 Warning(s).
 
@@ -42,7 +42,7 @@ Package Vendor: ARM
    * Component: CORE Version: 4.3.0
 
 <h2>Collection of Component include folders:</h2>
-  D:\graduateProject\Timer_test\MDK-ARM\RTE
+  d:\graduateProject\Timer_test\MDK-ARM\RTE
   D:\Keil_v5\ARM\PACK\ARM\CMSIS\4.5.0\CMSIS\Include
   D:\Keil_v5\ARM\PACK\Keil\STM32F1xx_DFP\2.3.0\Device\Include
 
