--- a/Timer_test/MDK-ARM/Timer_test/Timer_test.build_log.htm
+++ b/Timer_test/MDK-ARM/Timer_test/Timer_test.build_log.htm
@@ -27,9 +27,9 @@ Project File Date:  04/21/2021
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 1 (build 61)', folder: 'D:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Timer_test'
-compiling main.c...
+compiling tim.c...
 linking...
-Program Size: Code=11212 RO-data=492 RW-data=144 ZI-data=1368  
+Program Size: Code=11224 RO-data=496 RW-data=144 ZI-data=1368  
 FromELF: creating hex file...
 "Timer_test\Timer_test.axf" - 0 Error(s), 0 Warning(s).
 
